bin/Debug/net5.0/output.txt
   1. program prog1;
   2. var a, b, c, e: integer;
   3.     a, b, d, superExpr: real;
          ^
****[Error] Code 24: Duplicate identifier****
             ^
****[Error] Code 24: Duplicate identifier****
   4.     c: integer;
          ^
****[Error] Code 24: Duplicate identifier****
   5.     s: string;
   6.     bool: bolean;
                ^
****[Error] Code 26: Error in type definiton****
   7. begin
   8.     a := -13;
   9.     b := 0.3;
                  ^
****[Error] Code 27: Type mismatch****
  10.     
  11.     abcd := 'abcd';
          ^
****[Error] Code 25: Unknown identifier****
  12.     f := 'abcd' + 1;
          ^
****[Error] Code 25: Unknown identifier****
                         ^
****[Error] Code 27: Type mismatch****
  13.     
  14.     if (a > 13) and (a + b < 13.03) then
  15.         c := (13 - 9) / 2;
                               ^
****[Error] Code 27: Type mismatch****
  16.     
  17.     if ('abc' > 'bcd') then e := 13 + 0.5;
                                               ^
****[Error] Code 27: Type mismatch****
  18.     
  19.     while a do begin
                  ^
****[Error] Code 28: Expression type must be boolean****
  20.         a := a + 1;
  21.         e := e / 2;
                        ^
****[Error] Code 27: Type mismatch****
  22.     end;
  23.     
  24.     superExpr := a * a * a - 3 * a * a * b + 3 * a * b * b - b * b * b;
  25.     e := (a + b) * (a * a + a * b + b * b) div superExpr;
                                                              ^
****[Error] Code 27: Type mismatch****
  26.     
  27.     s := -'a+b' + (s - 'a');
                      ^
****[Error] Code 27: Type mismatch****
                                ^
****[Error] Code 27: Type mismatch****
  28.     
  29.     while not a do c:=c+1;
                      ^
****[Error] Code 27: Type mismatch****
  30.     
  31.     while not true do c:=c-2;
  32. end.

Количество ошибок: 16
